plural fixes, rm foram na gaidhlig, set mobile to gd, small terminology fixes

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -177,8 +177,8 @@ identity.ownerUnknown2=(neo aithnichte)
 # forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of downloads; #2 time left
 # examples: One active download (2 minutes remaining); 11 paused downloads
-activeDownloads=#1 luchdadh beò (#2); #1 luchdadh beò (#2); #1 luchdadh beò (#2); #1 luchdaidhean beòtha (#2)
-pausedDownloads=#1 luchdadh 'na stad; #1 luchdadh 'nan stad;#1 luchdaidhean 'nan stad;#1 luchdadh 'nan stad
+activeDownloads=Aon luchdadh beò (#2); #1 luchdadh beò (#2); #1 luchdaidhean beòtha (#2); #1 luchdadh beò (#2)
+pausedDownloads=Aon luchdadh 'na stad; #1 luchdadh 'nan stad;#1 luchdaidhean 'nan stad;#1 luchdadh 'nan stad
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Chaidh comharra-lìn a chruthachadh
@@ -237,7 +237,7 @@ privateBrowsingNeverAsk=&Na seall an teachdaireachd seo a-rithist
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Seall an #1 thaba gu lèir;Seall na #1 tabaichean; Seall na #1 taba gu lèir
+ctrlTab.showAll.label=;Seall an #1 thaba;Seall na #1 tabaichean; Seall na #1 taba gu lèir
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
