--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -43,7 +43,7 @@ netInterrupt=Bhris rudeigin a-steach air a' cheangal ri %S fhad 's a bha an duil
 netTimeout=Tha am frithealaiche aig %S ro fhada a' freagairt.
 redirectLoop=Mhothaich Firefox gu bheil am frithealaiche ag ath-sheòladh an iarrtais air dòigh nach crìochnaich gu bràth.
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don't translate "%S"
-confirmRepostPrompt=Feumaidh %S fiosrachadh a sheòladh ann a nì gnìomh sam bith a rinneadh roimhe (coltach ri lorg no dearbhadh òrduigh) a-rithist gus an duilleag seo a shealltainn dhut.
+confirmRepostPrompt=Gus an duilleag seo a shealltainn dhut, feumaidh %S fiosrachadh a chur gus gnìomh sam bith a rinn thu roimhe (can lorg no dearbhadh òrduigh) a dhèanamh a-rithist.
 resendButton.label=Ath-sheòl
 unknownSocketType=Chan eil fhios aig Firefox mar a nì e conaltradh leis an fhrithealaiche.
 netReset=Chaidh an ceangal ris an fhrithealaiche ath-shuidheachadh fhad 's a bha an duilleag 'ga luchdadh.
