--- a/toolkit/chrome/global/dateFormat.properties
+++ b/toolkit/chrome/global/dateFormat.properties
@@ -59,7 +59,7 @@ month.7.name=An t-Iuchar
 month.8.name=An Lùnastal
 month.9.name=An t-Sultain
 month.10.name=An Dàmhair
-month.11.name=An t-Samhainn
+month.11.name=An t-Samhain
 month.12.name=An Dùbhlachd
 
 day.1.name=DiDòmhnaich
