--- a/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -1,6 +1,6 @@
 # LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
 # forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-seconds=d(h)iog;diog(an)
+seconds=diog;dhiog;diogan;diog
 minutes=mhionaid;mhionaid;mionaidean;mionaid
 hours=uair;uair;uairean;uair
 days=latha;latha;làithean;làithean
