--- a/mail/chrome/messenger/vcard.properties
+++ b/mail/chrome/messenger/vcard.properties
@@ -207,7 +207,7 @@
 # VCARD_LDAP_TZ
 ## @name VCARD_LDAP_TZ
 ## @loc None
-1033=Raon-ama
+1033=Roinn-tìde
 
 # VCARD_LDAP_GEO
 ## @name VCARD_LDAP_GEO
