--- a/mail/chrome/messenger/imapMsgs.properties
+++ b/mail/chrome/messenger/imapMsgs.properties
@@ -247,7 +247,7 @@
 # Status - no messages to download 
 ## @name IMAP_NO_NEW_MESSAGES
 ## @loc None
-5056=Chan eil teachdaireachdan ùra air an frithealaiche.
+5056=Chan eil teachdaireachdan ùra air an fhrithealaiche.
 
 ## @name IMAP_DEFAULT_ACCOUNT_NAME
 ## @loc None
