--- a/mail/chrome/messenger/localMsgs.properties
+++ b/mail/chrome/messenger/localMsgs.properties
@@ -104,7 +104,7 @@ pop3PreviouslyEnteredPasswordIsInvalidPrompt=Cuir a-steach facal-faire ùr airso
 # Status - no messages to download 
 ## @name POP3_NO_MESSAGES
 ## @loc None
-4008=Chan eil teachdaireachdan ùra air an frithealaiche.
+4008=Chan eil teachdaireachdan ùra air an fhrithealaiche.
 
 # Status - messages received after the download
 ## @name POP3_DOWNLOAD_COUNT
@@ -163,7 +163,7 @@ pop3PreviouslyEnteredPasswordIsInvalidPrompt=Cuir a-steach facal-faire ùr airso
 # Status - write error occurred
 ## @name POP3_MESSAGE_FOLDER_BUSY
 ## @loc None
-4029=Gna am pasgan 'ga phròiseasadh. Fuirich ort gus am bi am pròiseasadh deiseil mus iarr thu teachdaireachdan.
+4029=Thaa am pasgan 'ga phròiseasadh. Fuirich ort gus am bi am pròiseasadh deiseil mus iarr thu teachdaireachdan.
 
 ## @name MOVEMAIL_CANT_OPEN_SPOOL_FILE
 ## @loc None
