--- a/mail/chrome/messenger/messenger.properties
+++ b/mail/chrome/messenger/messenger.properties
@@ -50,7 +50,7 @@ newTag=Taga ùr…
 getNextNMessages=Faigh an ath %S teachdaireachd naidheachd
 advanceNextPrompt=Air adhart dhan ath theachdaireachd gun leughadh ann an %S?
 titleNewsPreHost=air
-replyToSender=Freagair ris an t-seòladair
+replyToSender=Freagair an seòladair
 reply=Freagair
 EMLFiles=Faidhlichean puist
 OpenEMLFiles=Fosgail an teachdaireachd
@@ -177,12 +177,12 @@ totalMsgStatus=Gu h-iomlan: %S
 localFolders=Pasgain ionadail
 
 # LOCALIZATION NOTE (inboxFolderName): OK to translate all foldernames, bugzilla #57440 & bugzilla #23625 fixed
-inboxFolderName=Bogsa a-steach
-trashFolderName=Sgudal
-sentFolderName=Post cuirte
+inboxFolderName=Am bogsa a-steach
+trashFolderName=An sgudal
+sentFolderName=Am post cuirte
 draftsFolderName=Dreachan
 templatesFolderName=Teamplaidean
-outboxFolderName=Bogsa a-mach
+outboxFolderName=Am bogsa a-mach
 junkFolderName=Truilleis
 archivesFolderName=Tasg-lannan
 
