--- a/mail/chrome/messenger/news.properties
+++ b/mail/chrome/messenger/news.properties
@@ -53,7 +53,7 @@ enterPassword=Cuir a-steach facal-faire airson inntrigeadh dhan fhrithealaiche n
 enterPasswordTitle=Feum air facal-faire airson an fhrithealaiche naidheachdan
 okButtonText=Luchdaich a-nuas
 
-noNewMessages=Chan eil teachdaireachdan ùra air an frithealaiche.
+noNewMessages=Chan eil teachdaireachdan ùra air an fhrithealaiche.
 # LOCALIZATION NOTE (newNewsgroupHeaders): %1$S is the number of the current
 # header being downloaded, %2$S is the number of headers to be downloaded, and
 #  %3$S is the newsgroup whose headers are being downloaded.
