--- a/mail/chrome/messenger/importMsgs.properties
+++ b/mail/chrome/messenger/importMsgs.properties
@@ -111,7 +111,7 @@
 # Description: Address book field name
 ## @name IMPORT_FIELD_DESC
 ## @loc None
-2102=An t-ainm-taisbeanaidh
+2102=Ainm-taisbeanaidh
 
 # Description: Address book field name
 ## @name IMPORT_FIELD_DESC
