--- a/mail/chrome/messenger/search-attributes.properties
+++ b/mail/chrome/messenger/search-attributes.properties
@@ -14,7 +14,7 @@ SizeKB=Meud (KB)
 Tags=Tagaichean
 # for AB and LDAP
 AnyName=Ainm sam bith
-DisplayName=An t-ainm-taisbeanaidh
+DisplayName=Ainm-taisbeanaidh
 Nickname=Am far-ainm
 ScreenName=Ainm-sgrìn
 Email=Post-dealain
