typo, terminology consistency for mail and browser gd

--- a/editor/ui/chrome/composer/editor.properties
+++ b/editor/ui/chrome/composer/editor.properties
@@ -61,7 +61,7 @@ FailedFileMsg=Dh'fhàillig foillseachadh de %x% faidhlichean à %total%.
 Prompt=Smèid orm
 # LOCALIZATION NOTE (PromptFTPUsernamePassword): Don't translate %host% 
 PromptFTPUsernamePassword=Cuir a-steach an t-ainm cleachdaiche 's am facal-faire airson an fhrithealaiche FTP aig %host%
-RevertCaption=Aisig an tionndadh sàbhalaichte mu dheireadh
+RevertCaption=Aisig an tionndadh mu dheireadh a chaidh a shàbhaladh
 Revert=Aisig
 SendPageReason=mus dèid an duilleag seo a chur
 Send=Cuir
