--- a/mail/chrome/messenger/messenger.properties
+++ b/mail/chrome/messenger/messenger.properties
@@ -383,7 +383,7 @@ confirmViewDeleteMessage=A bheil thu cinnteach gu bheil thu airson an sealladh s
 
 # for virtual folders
 confirmSavedSearchTitle=Dearbhaich an sguabadh às
-confirmSavedSearchDeleteMessage=A bheil thu cinnteach gu bheil thu airson an lorg sàbhalaichte seo a sguabadh às?
+confirmSavedSearchDeleteMessage=A bheil thu cinnteach gu bheil thu airson an lorg seo a chaidh a shàbhaladh a sguabadh às?
 
 ## @name ENTER_PASSWORD_PROMPT
 ## @loc None
@@ -408,10 +408,10 @@ editTagTitle=Deasaich an taga
 
 # for the virtual folder list dialog title
 # %S is the name of the saved search folder
-editVirtualFolderPropertiesTitle=Deasaich roghainnean an luirg shàbhalaichte airson %S
+editVirtualFolderPropertiesTitle=Deasaich roghainnean an luirg a chaidh a shàbhaladh airson %S
 
 #alert to inform the user to choose one or more folders to search for a saved search folder
-alertNoSearchFoldersSelected=Feumaidh tu aon phasgan a thaghadh a tha ri rannsachadh air a' char as lugha airson a' phasgain luirg shàbhalaichte.
+alertNoSearchFoldersSelected=Feumaidh tu aon phasgan a thaghadh a tha ri rannsachadh air a' char as lugha airson a' phasgain luirg a chaidh a shàbhaladh.
 
 # These two are displayed in the message and folder pane windows
 # LOCALIZATION NOTE(????ByteAbbreviation): Do not translate %d below, it is the size of the message/folder
@@ -436,8 +436,8 @@ updatesItem_default.accesskey=c
 updatesItem_downloading=A' luchdadh a-nuas %S…
 updatesItem_downloadingFallback=A' luchdadh a-nuas ùrachadh…
 updatesItem_downloading.accesskey=d
-updatesItem_resume=Ath-thòisich luchdadh a-nuas %S…
-updatesItem_resumeFallback=Ath-thòisich luchdadh a-nuas an ùrachaidh…
+updatesItem_resume=Lean ort le luchdadh a-nuas %S…
+updatesItem_resumeFallback=Lean ort le luchdadh a-nuas an ùrachaidh…
 updatesItem_resume.accesskey=d
 updatesItem_pending=Cuir an t-ùrachadh a chaidh a luchdadh a-nuas an sàs an-dràsta…
 updatesItem_pendingFallback=Cuir an t-ùrachadh a chaidh a luchdadh a-nuas an sàs an-dràsta…
