missing string, some typos for Fx4

--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -6,7 +6,7 @@ SSL_ERROR_BAD_CERTIFICATE=Cha ghabh conaltradh tèarainte a dhèanamh ris an t-s
 SSL_ERROR_BAD_CLIENT=Fhuair am frithealaiche droch dhàta on chliant.
 SSL_ERROR_BAD_SERVER=Fhuair am frithealaiche droch dhàta on fhrithealaiche.
 SSL_ERROR_UNSUPPORTED_CERTIFICATE_TYPE=Chan eil taic ann ris an t-seòrsa seo de theisteanas.
-SSL_ERROR_UNSUPPORTED_VERSION=Tha an seise a' cleachdadh tionndadh dhen phrotacal tèarainteachd nach eil taic ris.
+SSL_ERROR_UNSUPPORTED_VERSION=Tha an seise a' cleachdadh tionndadh dhen phròtacal tèarainteachd nach eil taic ris.
 SSL_ERROR_WRONG_CERTIFICATE=Dh'fhàillig dearbhadh a' chliant: chan eil an iuchair phrìobhaideach ann an stòr-dàta nan iuchraichean a' freagairt ris an iuchair phoblach ann an stòr-dàta nan teisteanasan.
 SSL_ERROR_BAD_CERT_DOMAIN=Cha ghabh conaltradh tèarainte a dhèanamh ris an t-seise: chan eil ainm na h-àrainne a' freagairt ri teisteanas an fhrithealaiche.
 SSL_ERROR_SSL2_DISABLED=Tha an seise a' cur taic ri SSL tionndadh 2 a-mhàin, rud a tha air a chur à comas gu h-ionadail.
@@ -93,7 +93,7 @@ SSL_ERROR_ACCESS_DENIED_ALERT=Fhuair an seise teisteanas dligheach ach chaidh in
 SSL_ERROR_DECODE_ERROR_ALERT=Cha b' urrainn dhan t-seise an teachdaireachd crathadh-làimhe SSL a dhì-cheileadh.
 SSL_ERROR_DECRYPT_ERROR_ALERT=Tha an seise ag aithris gun do dh'fhàillig dearbhadh an t-soidhnidh no malairt na h-iuchrach.
 SSL_ERROR_EXPORT_RESTRICTION_ALERT=Tha an seise ag aithris nach eil an co-rèiteachadh a' gèilleadh ris na riaghailtean às-phortadh.
-SSL_ERROR_PROTOCOL_VERSION_ALERT=Tha an seise ag aithris gu bheil tionndadh a' phrotacail neo-chòrdail no gun taic.
+SSL_ERROR_PROTOCOL_VERSION_ALERT=Tha an seise ag aithris gu bheil tionndadh a' phròtacail neo-chòrdail no gun taic.
 SSL_ERROR_INSUFFICIENT_SECURITY_ALERT=Feumaidh am frithealaiche sifirean nas tèarainte na an fheadhainn a tha an cliant a' cur taic riutha an-dràsta.
 SSL_ERROR_INTERNAL_ERROR_ALERT=Tha an seise ag aithris gun do thachair in-mhearachd dha.
 SSL_ERROR_USER_CANCELED_ALERT=Sguir an cleachdaiche seise dhen chrathadh-làimhe.
