fixing the syncron strings, missing strings for gd

--- a/browser/chrome/browser/pageInfo.properties
+++ b/browser/chrome/browser/pageInfo.properties
@@ -59,7 +59,7 @@ mediaFileSize=%S kB
 mediaSize=%Spct × %Spct
 mediaSelectFolder=Tagh pasgan san dèid na dealbhan a shàbhaladh
 mediaBlockImage=Cuir bacadh air dealbhan o %S
-mediaUnknownNotCached=Neo aithnichte (gun tasgadh)
+mediaUnknownNotCached=Neo-aithnichte (gun tasgadh)
 mediaImageType=Dealbh %S
 mediaAnimatedImageType=Dealbh %S (beòthaichte, %S frèaman)
 mediaDimensions=%Spct × %Spct
