--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -116,5 +116,5 @@ connect.label=Ceangail
 disconnect.label=Dì-cheangail
 
 stopUsingAccount.title=A bheil thu airson sgur de chleachdadh a' chunntais seo?
-differentAccount.label=Ath-shuidhichidh seo gach fiosrachadh is roghainn cunntas a' cho-thìmheachaidh agad.
+differentAccount.label=Ath-shuidhichidh seo gach fiosrachadh is roghainn cunntas a' cho-shioncronachaidh agad.
 differentAccountConfirm.label=Ath-shuidhich a h-uile fiosrachadh
