--- a/browser/chrome/browser/syncGenericChange.properties
+++ b/browser/chrome/browser/syncGenericChange.properties
@@ -5,21 +5,21 @@ change.password.status.active = Ag atharrachadh an fhacail-fhaire agad
 change.password.status.success = Chaidh am facal-faire agad atharrachadh.
 change.password.status.error = Thachair mearachd rè atharrachadh an fhacail-fhaire agad.
 
-change.password2.introText = Feumaidh am facal-faire agad a bhith 8 caractairean a dh'fhaid air a' char as lugha. Chan fhaod e a bhith co-ionnan ris an ainm chleachdaiche no ris an iuchair cho-thìmeachaidh agad.
+change.password2.introText = Feumaidh am facal-faire agad a bhith 8 caractairean a dh'fhaid air a' char as lugha. Chan fhaod e a bhith co-ionnan ris an ainm chleachdaiche no ris an iuchair cho-shioncronachaidh agad.
 change.password.warningText = An aire: Chan urrainn dha na h-innealan eile agad ceangal ris a' chunntas agad nuair a bhios am facal-faire seo atharraichte agad.
 
-change.synckey.title = Atharraich an iuchair co-thìmeachaidh agad
-change.synckey.acceptButton = Atharraich an iuchair co-thìmeachaidh
-change.synckey.label = Ag atharrachadh na h-iuchrach co-thìmeachaidh 's a' luchdadh a-nuas an dàta ionadail, fuirich ort…
-change.synckey2.error = Thachair mearachd rè atharrachadh na h-iuchrach co-thìmeachaidh agad!
-change.synckey2.success = Chaidh an iuchair co-thìmeachaidh agad atharrachadh gu soirbheachail!
+change.synckey.title = Atharraich an iuchair co-shioncronachaidh agad
+change.synckey.acceptButton = Atharraich an iuchair co-shioncronachaidh
+change.synckey.label = Ag atharrachadh na h-iuchrach co-shioncronachaidh 's a' luchdadh a-nuas an dàta ionadail, fuirich ort…
+change.synckey2.error = Thachair mearachd rè atharrachadh na h-iuchrach co-shioncronachaidh agad!
+change.synckey2.success = Chaidh an iuchair co-shioncronachaidh agad atharrachadh gu soirbheachail!
 
 change.synckey.introText = Tha do phrìobhaideachd cudromach do Firefox
 change.synckey.introText2 = Gus do phrìobhaideachd iomlan a dhèanamh cinnteach, thèid an dàta gu lèir agad a dhubh-cheileadh mus dèid a luchdadh suas. Cha dèid an iuchair airson dì-cheileadh an dàta agad a luchdadh suas.
 # LOCALIZATION NOTE (change.synckey2.warningText) "Sync" should match &syncBrand.shortName.label; from syncBrand.dtd
-change.synckey2.warningText = An aire: Ma dh'atharraicheas tu seo, sguabaidh seo às a h-uile dàta air an fhrithealaiche cho-thìmeachaidh 's luchdaichidh e suas dàta ùr fo dhìon na h-iuchrach co-thìmeachaidh seo. Cha cho-thìmich na h-innealan eile agad gus an cuirear a-steach an iuchair co-thìmeachaidh airson an inneil sin.
+change.synckey2.warningText = An aire: Ma dh'atharraicheas tu seo, sguabaidh seo às a h-uile dàta air an fhrithealaiche cho-shioncronachaidh 's luchdaichidh e suas dàta ùr fo dhìon na h-iuchrach co-shioncronachaidh seo. Cha cho-shioncronaich na h-innealan eile agad gus an cuirear a-steach an iuchair co-shioncronachaidh airson an inneil sin.
 
-new.synckey.label = An iuchair co-thìmeachaidh agad
+new.synckey.label = An iuchair co-shioncronachaidh agad
 
 # LOCALIZATION NOTE (new.password.title): This (and associated new.password/passphrase) are used on a second computer when it detects that your password or passphrase has been changed on a different device.
 new.password.title            = Ùraich am facal-faire
@@ -29,7 +29,7 @@ new.password.confirm          = Dearbhaich am facal-faire ùr agad
 new.password.acceptButton     = Ùraich am facal-faire
 new.password.status.incorrect = Tha am facal-faire cearr, feuch ris a-rithist.
 
-new.synckey.title          = Ùraich an iuchair co-thìmeachaidh
-new.synckey.introText        = Dh'atharraich an iuchair co-thìmeachaidh agad. Cuir a-steach an iuchair ùr agad
-new.synckey.acceptButton     = Ùraich an iuchair co-thìmeachaidh
-new.synckey.status.incorrect = Tha an iuchair co-thìmeachaidh cearr, feuch ris a-rithist.
+new.synckey.title          = Ùraich an iuchair co-shioncronachaidh
+new.synckey.introText        = Dh'atharraich an iuchair co-shioncronachaidh agad. Cuir a-steach an iuchair ùr agad
+new.synckey.acceptButton     = Ùraich an iuchair co-shioncronachaidh
+new.synckey.status.incorrect = Tha an iuchair co-shioncronachaidh cearr, feuch ris a-rithist.
