--- a/browser/installer/override.properties
+++ b/browser/installer/override.properties
@@ -111,7 +111,7 @@ RenameOnReboot="Cuir ainm ùr air nuair a dh'ath thòisicheas e: "
 Rename="Cuir ainm ùr air: "
 Skipped="Air a leigeil seachad: "
 CopyDetails=Cuir lethbhreac dhen mion-fhiosrachadh air a' bhòrd-chliopaichean
-LogInstall=Dèan log dhen phròiseas stàlaidh
+LogInstall=Dèan loga dhen phròiseas stàlaidh
 Byte=B
 Kilo=K
 Mega=M
