--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -62,9 +62,8 @@ UnexpectedCanvasVariantStyle=canvas: chaidh iarrtas a leigeil seachad airson str
 EmptyGetElementByIdParam=Chaidh sreang bhàn a chur gu getElementById().
 LowMemoryTitle=Rabhadh: Cuimhne a' traoghadh
 LowMemoryMessage=Chaidh crìoch a chur air sgriobt air an duilleag seo air sgàth traoghadh na cuimhne.
-WrongEventPropertyAccessWarning=Cha bu chòir do dh'fheart '%S' de thachartas %S 'ga chleachdadh. Chan eil brìgh sa luach.
 SpeculationFailed=Chaidh craobh neo-chothromaichte a sgrìobhadh le document.write() agus chuir seo ath-phàrsadh air dàta on lìonra. Airson barrachd fiosrachaidh: https://developer.mozilla.org/en/Optimizing_Your_Pages_for_Speculative_Parsing
-DocumentWriteIgnored=Chaidh gairm airson document.write() o sgriobt on taobh a-muigh 's a chaidh a luchdadh gu neo-cho-thìmichte a leigeil seachad.
+DocumentWriteIgnored=Chaidh gairm airson document.write() o sgriobt on taobh a-muigh 's a chaidh a luchdadh gu neo-shioncronach a leigeil seachad.
 FormValidationTextTooLong=Thoir air falbh caractairean gus nach bi ann ach %S no nas lugha (tha %S caractairean ann an-dràsta).
 FormValidationValueMissing=Lìon an raon seo.
 FormValidationCheckboxMissing=Cuir cromag ris a' bhogsa seo ma tha thu airson leantainn air adhart.
