--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -72,7 +72,7 @@ SSL_ERROR_MD5_DIGEST_FAILURE=Dh'fhàillig am foincsean eagaraidh MD5.
 SSL_ERROR_SHA_DIGEST_FAILURE=Dh'fhàillig am foincsean eagaraidh  SHA-1.
 SSL_ERROR_MAC_COMPUTATION_FAILURE=Dh'fhàillig coimpiutadh Còd Dearbhachadh na Teachdaireachd (MAC).
 SSL_ERROR_SYM_KEY_CONTEXT_FAILURE=Dh'fhàillig cruthachadh an co-theacs Symmetric Key.
-SSL_ERROR_SYM_KEY_UNWRAP_FAILURE=Dh'fhàillig dì-phaisgeadh an Symmetric Key anns an teachdaireachd Client Key Exchange.
+SSL_ERROR_SYM_KEY_UNWRAP_FAILURE=Dh'fhàillig dì-phasgadh an Symmetric Key anns an teachdaireachd Client Key Exchange.
 SSL_ERROR_PUB_KEY_SIZE_LIMIT_EXCEEDED=Dh'fheuch am frithealaiche SSL ri iuchair phoblach de dh'ìre dhachaigheil a chleachdadh le sreath-sifir às-phortaidh.
 SSL_ERROR_IV_PARAM_FAILURE=Dh'fhàillig còd PKCS11 le eadar-theangachadh IV gu paramadair.
 SSL_ERROR_INIT_CIPHER_SUITE_FAILURE=Dh'fhàillig tòiseachadh an t-sreatha-sifir a chaidh a thaghadh.
