--- a/security/manager/chrome/pipnss/pipnss.properties
+++ b/security/manager/chrome/pipnss/pipnss.properties
@@ -293,7 +293,7 @@ CertDumpECsect571k1=SECG lùb eileapsach sect571k1 (.i. NIST K-571)
 CertDumpECsect571r1=SECG lùb eileapsach sect571r1 (.i. NIST B-571)
 CertDumpRawBytesHeader=Meud: %S baidht / %S biod
 VerifySSLClient_p=Cliant
-VerifySSLServer_p=Frithealaiche
+VerifySSLServer_p=Am frithealaiche
 VerifySSLStepUp_p=Step-Up
 VerifySSLCA_p=Ùghdarras teisteanachaidh SSL
 VerifyEmailSigner_p=Cuir ainm ris
