--- a/browser/chrome/browser/syncSetup.properties
+++ b/browser/chrome/browser/syncSetup.properties
@@ -1,4 +1,4 @@
-button.syncOptions.label       = Roghainnean a' cho-thìmeachaidh
+button.syncOptions.label       = Roghainnean a' cho-shioncronachaidh
 button.syncOptionsDone.label   = Dèanta
 button.syncOptionsCancel.label = Sguir dheth
 
@@ -29,14 +29,14 @@ historyDaysCount.label      = #1 latha dhen eachraidh;#1 latha dhen eachraidh;#1
 # #1 is the number of passwords (was %S for a short while, use #1 instead, even if both work)
 passwordsCount.label        = #1 fhacal-faire;#1 fhacal-faire;#1 faclan-faire;#1 facal-faire
 
-save.synckey.title = Sàbhail an iuchair co-thìmeachaidh
+save.synckey.title = Sàbhail an iuchair co-shioncronachaidh
 
-newAccount.action.label = Tha co-thìmeachadh Firefox air a shuidheachadh a-nis is co-thìmichidh e an dàta brabhsair gu lèir agad gu fèin-obrachail.
-newAccount.change.label = 'S urrainn dhut taghadh na thèid a cho-thìmeachadh fo roghainnean a' cho-thìmeachaidh gu h-ìosal.
-resetClient.change.label = Co-mheasgaichidh co-thìmeachadh Firefox dàta brabhsair a' choimpiutair seo dhan chunntas cho-thìmeachaidh agad an-dràsta.
-wipeClient.change.label = Cuiridh co-thìmeachadh Firefox dàta a' chunntais cho-thìmeachaidh agad an àite an dàta bhrabhsair air a' choimpiutair seo an-dràsta.
-wipeRemote.change.label = Cuiridh co-thìmeachadh Firefox dàta on choimpiutair agad an àite an dàta bhrabhsair gu lèir sa chunntas cho-thìmeachaidh agad.
-existingAccount.change.label = 'S urrainn dhut an roghainn seo atharrachadh fo roghainnean a' cho-thìmeachaidh gu h-ìosal.
+newAccount.action.label = Tha co-shioncronachadh Firefox air a shuidheachadh a-nis is co-shioncronaichidh e an dàta brabhsair gu lèir agad gu fèin-obrachail.
+newAccount.change.label = 'S urrainn dhut taghadh na thèid a cho-shioncronachadh fo roghainnean a' cho-shioncronachaidh gu h-ìosal.
+resetClient.change.label = Co-mheasgaichidh co-shioncronachadh Firefox dàta brabhsair a' choimpiutair seo dhan chunntas cho-shioncronachaidh agad an-dràsta.
+wipeClient.change.label = Cuiridh co-shioncronachadh Firefox dàta a' chunntais cho-shioncronachaidh agad an àite an dàta bhrabhsair air a' choimpiutair seo an-dràsta.
+wipeRemote.change.label = Cuiridh co-shioncronachadh Firefox dàta on choimpiutair agad an àite an dàta bhrabhsair gu lèir sa chunntas cho-shioncronachaidh agad.
+existingAccount.change.label = 'S urrainn dhut an roghainn seo atharrachadh fo roghainnean a' cho-shioncronachaidh gu h-ìosal.
 
 # Several other strings are used (via Weave.Status.login), but they come from
 #  /services/sync
