--- a/toolkit/chrome/global/commonDialogs.properties
+++ b/toolkit/chrome/global/commonDialogs.properties
@@ -21,7 +21,7 @@ ScriptDialogPreventTitle=Dearbhaich roghainn a' chòmhraidh
 # take advantage of sentence structure in order to mislead the user (see
 # bug 244273). %1 should be integrated into the translated sentences as
 # little as possible. %2 is the url of the site being accessed.
-EnterLoginForRealm=Tha %2$S ag iarraidh ainm cleachdaiche is facal-faire. Tha an làrach ag ràdh: "%1$S"
-EnterLoginForProxy=Tha a' phrogsaidh %2$S ag iarraidh ainm cleachdaiche is facal-faire. Tha an làrach ag ràdh: "%1$S"
-EnterUserPasswordFor=Cuir a-steach ainm cleachdaiche is facal-faire airson %1$S
+EnterLoginForRealm=Tha %2$S ag iarraidh ainm-cleachdaiche is facal-faire. Tha an làrach ag ràdh: "%1$S"
+EnterLoginForProxy=Tha a' phrogsaidh %2$S ag iarraidh ainm-cleachdaiche is facal-faire. Tha an làrach ag ràdh: "%1$S"
+EnterUserPasswordFor=Cuir a-steach ainm-cleachdaiche is facal-faire airson %1$S
 EnterPasswordFor=Cuir a-steach facal-faire airson %1$S air %2$S
