missing strings, i think

--- a/toolkit/crashreporter/crashreporter.ini
+++ b/toolkit/crashreporter/crashreporter.ini
@@ -9,7 +9,7 @@ CrashReporterTitle=Aithrisiche nan tuislidhean
 # LOCALIZATION NOTE (CrashReporterVendorTitle): %s is replaced with the vendor name.  (i.e. "Mozilla")
 CrashReporterVendorTitle=Aithrisiche nan tuislidhean %s
 # LOCALIZATION NOTE (CrashReporterErrorText): %s is replaced with another string containing detailed information.
-CrashReporterErrorText=Bha duilgheadas aig a' phrògram is thuislich e. Gu mì-fhortanach chan urrainn do dh'aithrisiche nan tuislidhean aithisg a chur mun tuisleadh seo. Mion-fhiosrachadh: %s
+CrashReporterErrorText=Bha duilgheadas aig a' phrògram is thuislich e.\n\nGu mì-fhortanach chan urrainn do dh'aithrisiche nan tuislidhean aithisg a chur mun tuisleadh seo.\n\nMion-fhiosrachadh: %s
 # LOCALIZATION NOTE (CrashReporterProductErrorText2): The first %s is replaced with the product name (i.e. "Firefox"), the second is replaced with another string containing detailed information.  These two substitutions can not be reordered!
 CrashReporterProductErrorText2=Bha duilgheadas aig %s is thuislich %s. Gu mì-fhortanach chan urrainn do dh'aithrisiche nan tuislidhean aithisg a chur mun tuisleadh seo. Mion-fhiosrachadh: %s
 CrashReporterSorry=Tha sinn duilich
