missing sync strings plus a few tweaks

--- a/browser/installer/override.properties
+++ b/browser/installer/override.properties
@@ -97,7 +97,7 @@ Delete="Sguab às am faidhle: "
 DeleteOnReboot="Sguab às na leanas rè ath-thòiseachaidh: "
 ErrorCreatingShortcut="Mearachd ann an cruthachadh na h-ath-ghoirid: "
 ErrorCreating="Mearachd ann an cruthachadh: "
-ErrorDecompressing=Mearachd ann an dì-dhùmhlachadh dàta! Stàlaiche air a thruailleadh?
+ErrorDecompressing=Mearachd ann an dì-dhùmhlachadh dàta! Stàlaichear air a thruailleadh?
 ErrorRegistering=Mearachd ann an clàrachadh DLL
 ExecShell="ExecShell: "
 Exec="Cuir an gnìomh: "
