--- a/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -45,8 +45,8 @@ notification.installError=Thachair mearachd rè stàladh %1$S.
 notification.installError.retry=Feuch ris a-rithist
 notification.installError.retry.tooltip=Feuch ri luchdadh a-nuas is ri stàladh an tuilleadain seo a-rithist
 
-#LOCALIZATION NOTE (contributionAmount) %S is the currency amount recommended for contributions
-contributionAmount=An tabhartas a mholar: %S
+#LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
+contributionAmount2=Na mholar a thabhartas: %S
 
 installDownloading='Ga luchdadh a-nuas
 installDownloaded=Air a luchdadh a-nuas
