missing string, some language fixes

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -3,11 +3,6 @@ nv_timeout=Thar àm
 nv_stopped='Na stad
 openFile=Fosgail faidhle
 
-droponbookmarksbutton=Slaod ceangal an-seo gus comharra-lìn a dhèanamh dheth
-dropondownloadsbutton=Slaod ceangal no faidhle an-seo gus a luchdadh a-nuas
-droponnewtabbutton=Slaod ceangal no faidhle an-seo gus fhosgladh ann an taba ùr
-droponnewwindowbutton=Slaod ceangal no faidhle an-seo gus fhosgladh ann an uinneag ùr
-droponhomebutton=Slaod ceangal no faidhle an-seo gus a thionndadh 'nad dhuilleag mhòr
 droponhometitle=Suidhich an duilleag-dhachaigh
 droponhomemsg=A bheil thu ag iarraidh an sgrìobhainn seo mar an duilleag-dhachaigh ùr agad?
 
@@ -124,7 +119,7 @@ crashedpluginsMessage.learnMore=Tuilleadh eòlais…
 # clear" is set to "Everything", the Clear Recent History dialog's title is
 # changed to this.  See UI mockup and comment 11 at bug 480169 -->
 sanitizeDialog2.everything.title=Glan an eachdraidh gu lèir
-sanitizeButtonOK=Glan an-dràsta
+sanitizeButtonOK=Falmhaich e an-dràsta
 # LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has not modified the default set of history items to clear.
@@ -133,22 +128,6 @@ sanitizeEverythingWarning2=Thèid an eachdraidh gu lèir a ghlanadh.
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has modified the default set of history items to clear.
 sanitizeSelectedWarning=Thèid gach rud a thagh thu a ghlanadh.
-
-# Check for Updates
-# LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
-# Which one is used depends on Update process state.
-updatesItem_default=Lorg ùrachaidhean…
-updatesItem_defaultFallback=Lorg ùrachaidhean…
-updatesItem_default.accesskey=c
-updatesItem_downloading=A' luchdadh a-nuas %S…
-updatesItem_downloadingFallback=A' luchdadh a-nuas ùrachadh…
-updatesItem_downloading.accesskey=d
-updatesItem_resume=Lean ort le luchdadh a-nuas %S…
-updatesItem_resumeFallback=Lean ort le luchdadh a-nuas an ùrachaidh…
-updatesItem_resume.accesskey=d
-updatesItem_pending=Cuir an t-ùrachadh a chaidh a luchdadh a-nuas an sàs an-dràsta…
-updatesItem_pendingFallback=Cuir an t-ùrachadh a chaidh a luchdadh a-nuas an sàs an-dràsta…
-updatesItem_pending.accesskey=d
 
 # Check for Updates in the About Dialog - button labels and accesskeys
 # LOCALIZATION NOTE - all of the following update buttons labels will only be
