--- a/browser/chrome/browser/pageInfo.properties
+++ b/browser/chrome/browser/pageInfo.properties
@@ -52,7 +52,7 @@ mediaVideo=Video
 mediaAudio=Fuaim
 mediaBGImg=Cùlaibh
 mediaObject=Nì
-mediaEmbed=Neadaich
+mediaEmbed=Leabaich
 mediaLink=Ìomhaigheag
 mediaInput=Cuir a-steach
 mediaFileSize=%S kB
