--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -144,7 +144,7 @@ devinfo_manID=Saothraiche
 devinfo_serialnum=Àireamh shreathach
 devinfo_hwversion=Tionndadh a' bhathar-chruaidh
 devinfo_fwversion=Tionndadh a' bhathar-dainginn
-devinfo_status=Cor
+devinfo_status=Staid
 devinfo_desc=Tuairisgeul
 devinfo_stat_disabled=Air a chur à comas
 devinfo_stat_notpresent=Chan eil e ann
