--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -52,7 +52,7 @@ isprinting=Chan ghabh sgrìobhainn atharrachadh fhad 's a thathar 'ga chlò-bhua
 deniedPortAccess=Tha an seòladh seo a' cleachdadh port lìonra a chleachdar a chum rudan eile a ghnàth seach brabhsadh-lìn. Sguir Firefox dhen iarrtas gus do dhìon.
 proxyResolveFailure=Tha Firefox air a rèiteachadh gus frithealaiche progsaidh a lorg nach gabh a lorg.
 proxyConnectFailure=Tha Firefox air a rèiteachadh gus frithealaiche progsaidh a chleachdadh a tha a' diùltadh cheanglaichean.
-contentEncodingError=Chan fhaic thu an duilleag sin a chionn 's gu bheil e a' cleachdadh seòrsa de dhlùth-theannadh a tha mì-dhligheach no nach eil taic ann dha.
+contentEncodingError=Chan fhaic thu an duilleag sin a chionn 's gu bheil e a' cleachdadh seòrsa de dhùmhlachadh a tha mì-dhligheach no nach eil taic ann dha.
 unsafeContentType=Chan fhaic thu an duilleag sin a chionn 's gum faod a leithid de dh'fhaidhle a bhith cunnartach ma dh'fhosglas tu e. Nach leig thu fios air an duilgheadas seo gun fheadhainn aig a bheil an làrach-lìn?
 externalProtocolTitle=Iarrtas air pròtacal on taobh a-muigh
 externalProtocolPrompt=Tha feum air prògram eile gus na ceanglaichean  %1$S: a làimhseachadh\n\n\nCeangal a dh'iarradh:\n\n%2$S\n\nPrògram: %3$S\n\n\nMura robh dùil agad ris an iarrtas seo, dh'fhaodadh gu bheilear a' feuchainn ri fàth a ghabhail air laigse sa phrògram sin. Sguir dhen iarrtas seo mur eil thu cinnteach nach eil e droch rùnach.\n
