--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -93,6 +93,7 @@ popupWarningButtonUnix.accesskey=R
 popupAllow=Ceadaich priob-uinneagan do %S
 popupBlock=Cuir bacadh air priob-uinneagan o %S
 popupWarningDontShowFromMessage=Na seall an teachdaireachd seo ma tha bacadh air priob-uinneagan
+popupWarningDontShowFromLocationbar=Na seall am bàr fiosrachaidh nuair a bhios bacadh air priob-uinneagan
 popupShowPopupPrefix=Seall "%S"
 
 # missing plugin installer
