--- a/toolkit/chrome/global/aboutSupport.properties
+++ b/toolkit/chrome/global/aboutSupport.properties
@@ -23,3 +23,4 @@ adapterDrivers = Draibhearan nam freagarraichean
 adapterRAM = RAM an fhreagarraiche
 driverVersion = Tionndadh an draibheir
 driverDate = Ceann-là an draibheir
+webglRenderer = Reandaraiche WebGL
