Scots Gaelic: update for Aurora 17

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -120,12 +120,22 @@ carbonFailurePluginsMessage.message=Feumaidh an duilleag seo plugan nach obraich
 carbonFailurePluginsMessage.restartButton.label=Ath-thòisich sa mhodh 32-bit
 carbonFailurePluginsMessage.restartButton.accesskey=A
 activatePluginsMessage.message=A bheil thu airson na plugain air an duilleag seo a chur an gnìomh?
-activatePluginsMessage.label=Cuir na plugain an gnìomh
+activatePluginsMessage.label=Activate All Plugins
 activatePluginsMessage.accesskey=C
 activatePluginsMessage.always=Cuir an gnìomh na plugain airson na làraich seo an-còmhnaidh
 activatePluginsMessage.always.accesskey=u
 activatePluginsMessage.never=Na cuir na plugain an gnìomh airson na làraich seo idir
 activatePluginsMessage.never.accesskey=N
+activateSinglePlugin=Cuir beò
+PluginClickToPlay=Click here to activate the %S plugin.
+# LOCALIZATION NOTE - "vulnerable" indicates there is a security bug in the
+# plugin that is being exploited by attackers.
+PluginVulnerableUpdatable=This plugin is vulnerable and should be updated.
+PluginVulnerableNoUpdate=This plugin has security vulnerabilities.
+vulnerableUpdatablePluginWarning=Outdated Version!
+vulnerableNoUpdatePluginWarning=Vulnerable Plugin!
+vulnerablePluginsMessage=Some plugins have been deactivated for your safety.
+pluginInfo.unknownPlugin=Neo-aithnichte
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
