--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -213,9 +213,9 @@ contextmenu.copyLink=Dèan lethbhreac dhen cheangal
 contextmenu.shareLink=Co-roinn an ceangal
 contextmenu.bookmarkLink=Dèan comharra-lìn dhen cheangal
 contextmenu.copyEmailAddress=Dèan lethbhreac de sheòladh a' phuist-dhealain
-contextmenu.shareEmailAddress=Share Email Address
+contextmenu.shareEmailAddress=Co-roinn seòladh a\\' phuist-d
 contextmenu.copyPhoneNumber=Dèan lethbhreac dhen àireamh fhòn
-contextmenu.sharePhoneNumber=Share Phone Number
+contextmenu.sharePhoneNumber=Co-roinn an àireamh fòn
 contextmenu.changeInputMethod=Tagh dòigh an steach-chuir
 contextmenu.fullScreen=Làn-sgrìn
 contextmenu.shareImage=Co-roinn an dealbh
@@ -224,7 +224,7 @@ contextmenu.addSearchEngine=Cuir einnsean-luirg ris
 
 contextmenu.copy=Dèan lethbhreac
 contextmenu.copyAll=Dèan lethbhreac dhen a h-uile
-contextmenu.selectWord=Select Word
+contextmenu.selectWord=Tagh am facal
 contextmenu.selectAll=Tagh a h-uile
 contextmenu.paste=Cuir ann
 
@@ -245,11 +245,11 @@ timer.end=%1$S: %2$Sms
 webapps.installTitle=Stàlaich an aplacaid
 webapps.alertSuccess=Chaidh a stàladh
 # Shown when there is a generic problem installing an app
-webapps.installError=Error installing application
+webapps.installError=Mearachd a\\'s stàladh na h-aplacaid
 # Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Invalid application manifest
+webapps.manifestInstallError=Tha manifest na h-aplacaid mì-dhligheach
 # Shown when a network error prevented installing an app
-webapps.networkInstallError=Could not download manifest
+webapps.networkInstallError=Cha b\\' urrainn dhuinn am manifest a luchdadh a-nuas
 
 # Click to play plugins
 clickToPlayPlugins.message1=Tha susbaint plugain ann an%S. Am bu mhath leat a chluich?
@@ -281,7 +281,7 @@ remoteIncomingPromptDisable=Cuir à comas
 
 # Helper apps
 helperapps.open=Fosgail
-helperapps.ignore=Ignore
-helperapps.dontAskAgain=Don't ask again for this site
+helperapps.ignore=Leig seachad
+helperapps.dontAskAgain=Na faighnich dhìom a-rithist airson na làraich seo
 helperapps.openWithApp2=Fosgail leis an aplacaid %S
 helperapps.openWithList2=Fosgail le aplacaid
