Scottish Gaelic: All 100% for Aurora except developer

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -55,6 +55,9 @@ popupButtonAllowOnce=Seall
 popupButtonAlwaysAllow2=Seall an-còmhnaidh
 popupButtonNeverWarn2=Na seall idir
 
+# SafeBrowsing
+safeBrowsingDoorhanger=Fhuaras fios gu bheil bathar droch-rùnach no fiasgach air an làrach seo. Bi faiceallach!
+
 # LOCALIZATION NOTE (blockPopups.label): Label that will be used in
 # site settings dialog.
 blockPopups.label=Cuir casg air priob-uinneagan
@@ -67,7 +70,7 @@ telemetry.optin.yes=Cuidichidh
 telemetry.optin.no=Cha chuidich
 
 # XPInstall
-xpinstallPromptWarning2=Chum %S an làrach seo (%S) o iarrtas a chur thugad gus bathar-bog a stàladh air a' choimpiutair agad.
+xpinstallPromptWarning2=Chum %S an làrach seo (%S) o iarrtas a chur thugad gus bathar-bog a stàladh air an uidheam agad.
 xpinstallPromptAllowButton=Ceadaich
 xpinstallDisabledMessageLocked=Chuir rianaire an t-siostaim agad casg air stàladh bathair-bhuig.
 xpinstallDisabledMessage2=Chan eil stàladh bathair-bhuig an comas an-dràsta. Briog air "Cuir an comas" agus feuch ris a-rithist.
@@ -116,7 +119,7 @@ typeError=Mearachd:
 typeWarning=Rabhadh:
 
 # Offline web applications
-offlineApps.available2=Tha %S ag iarraidh dàta a stòradh air a' choimpiutair agad a chum cleachdadh far loidhne.
+offlineApps.available2=Tha %S ag iarraidh dàta a stòradh air an uidheam agad a chum cleachdadh far loidhne.
 offlineApps.allow=Ceadaich
 offlineApps.never=Na ceadaich
 offlineApps.notNow=Chan ann an-dràsta
@@ -126,17 +129,17 @@ offlineApps.storeOfflineData=Stòir dàta far loidhne
 
 # New-style ContentPermissionPrompt values
 offlineApps.dontAllow=Na ceadaich
-offlineApps.wantsTo=Tha %S ag iarraidh dàta a stòradh air a' choimpiutair agad a chum cleachdadh far loidhne.
+offlineApps.wantsTo=Tha %S ag iarraidh dàta a stòradh air an uidheam agad a chum cleachdadh far loidhne.
 
 # IndexedDB Quota increases
 indexedDBQuota.allow=Ceadaich
 indexedDBQuota.dontAllow=Na ceadaich
-indexedDBQuota.wantsTo=Tha %S ag iarraidh dàta a stòradh air a' choimpiutair agad a chum cleachdadh far loidhne.
+indexedDBQuota.wantsTo=Tha %S ag iarraidh dàta a stòradh air an uidheam agad a chum cleachdadh far loidhne.
 
 # Open Web Apps management API
 openWebappsManage.allow=Ceadaich
 openWebappsManage.dontAllow=Na ceadaich
-openWebappsManage.wantsTo=Tha %S ag iarraidh aplacaidean air an inneal agad a rianachd.
+openWebappsManage.wantsTo=Tha %S ag iarraidh aplacaidean air an uidheam agad a stiùireadh.
 
 # LOCALIZATION NOTE (password.rememberPassword): Label that will be used in
 # site settings dialog.
@@ -146,7 +149,7 @@ password.rememberPassword=Cuimhnich am facal-faire
 password.remember=Cum an cuimhne
 # LOCALIZATION NOTE (password.never): This should match
 # promptNeverForSiteButtonText in passwordmgr.properties
-password.never=Chan ann gu sìorraidh bràth
+password.never=Chan ann idir
 
 # Bookmark List
 bookmarkList.desktop=Comharraidhean-lìn air an deasg
@@ -218,6 +221,7 @@ contextmenu.copyPhoneNumber=Dèan lethbhreac dhen àireamh fhòn
 contextmenu.sharePhoneNumber=Co-roinn an àireamh fòn
 contextmenu.changeInputMethod=Tagh dòigh an steach-chuir
 contextmenu.fullScreen=Làn-sgrìn
+contextmenu.copyImageLocation=Dèan lethbhreac de sheòladh an deilbh
 contextmenu.shareImage=Co-roinn an dealbh
 contextmenu.saveImage=Sàbhail an dealbh
 contextmenu.addSearchEngine=Cuir einnsean-luirg ris
@@ -230,6 +234,17 @@ contextmenu.paste=Cuir ann
 
 # Select UI
 selectHelper.closeMultipleSelectDialog=Dèanta
+
+#Input widgets UI
+inputWidgetHelper.date=Tagh latha
+inputWidgetHelper.datetime=Tagh latha 's àm
+inputWidgetHelper.datetime-local=Tagh latha 's àm
+inputWidgetHelper.time=Tagh àm
+inputWidgetHelper.week=Tagh seachdain
+inputWidgetHelper.month=Tagh mìos
+inputWidgetHelper.cancel=Sguir dheth
+inputWidgetHelper.set=Suidhich
+inputWidgetHelper.clear=Falamhaich
 
 # Web Console API
 stacktrace.anonymousFunction=<gun urra>
@@ -285,3 +300,5 @@ helperapps.ignore=Leig seachad
 helperapps.dontAskAgain=Na faighnich dhìom a-rithist airson na làraich seo
 helperapps.openWithApp2=Fosgail leis an aplacaid %S
 helperapps.openWithList2=Fosgail le aplacaid
+helperapps.always=An-còmhnaidh
+helperapps.never=Chan ann idir
