Scots Gaelic: pull from Pootle for Aurora 19

--- a/browser/installer/custom.properties
+++ b/browser/installer/custom.properties
@@ -55,7 +55,7 @@ ERROR_CREATE_DIRECTORY_PREFIX=Mearachd ann an cruthachadh an eòlaire:
 ERROR_CREATE_DIRECTORY_SUFFIX=Briog air "Sguir dheth" gus casg a chur air an stàladh no\nFeuch ris a-rithist gus feuchainn ris as ùr.
 
 UN_CONFIRM_PAGE_TITLE=Dì-stàlaich $BrandFullName
-UN_CONFIRM_PAGE_SUBTITLE=Thoir $BrandShortName às a' choimpiutair agad.
+UN_CONFIRM_PAGE_SUBTITLE=Thoir $BrandFullName às a' choimpiutair agad.
 UN_CONFIRM_UNINSTALLED_FROM=Thèid $BrandShortName a dhì-stàladh on àite a leanas:
 UN_CONFIRM_CLICK=Briog air "Dì-stàlaich" gus leantainn ort.
 UN_REMOVE_PROFILES=Sguab às mo dhàta pearsanta 's mo &roghainnean gnàthaichte aig $BrandShortName
@@ -73,7 +73,7 @@ STATUS_CLEANUP=Beagan obrach-taighe…
 OPTIONS_SUMMARY=Tagh an seòrsa de shuidheachadh as fhearr leat is briog air &quot;Air adhart&quot; an uairsin.
 # One line
 OPTION_STANDARD_DESC=Thèid $BrandShortName a stàladh leis na roghainnean as cumanta.
-OPTION_STANDARD_RADIO=&Stàladh bunaiteach
+OPTION_STANDARD_RADIO=&Stannardach
 # Two lines
 OPTION_CUSTOM_DESC=Bidh cothrom agad roghadh is taghadh a dhèanamh eadar na roghainnean a thèid an stàladh. Cha mholamaid an dòigh seo ach do chleachdaichean sàr-eòlach.
 OPTION_CUSTOM_RADIO=Stàladh &gnàthaichte
