--- a/browser/installer/nsisstrings.properties
+++ b/browser/installer/nsisstrings.properties
@@ -22,7 +22,7 @@ WIN_CAPTION=Suidheachadh $BrandShortName
 
 INTRO_BLURB=Gun robh math agad airson $BrandFullName a thaghadh, brabhsair a bheir dhut seòladh rèidh air an lìon. Dèan briogadh gus a stàladh.
 INSTALL_BLURB1=Tha thu an impis an teicneolas as ùire a chur gu feum a thaobh astair, sùbailteachd is tèarainteachd agus làn-smachd agadsa air cùisean.
-INSTALL_BLURB2=Tha $BrandFullName 'ga dhealbhadh le buidheann nach eil ag obair a chum prothaid ach dìreach airson piseach a thoirt air brabhsadh agus an lìon.
+INSTALL_BLURB2=Tha $BrandShortName 'ga dhealbhadh le buidheann nach eil ag obair a chum prothaid ach dìreach airson piseach a thoirt air brabhsadh agus an lìon.
 INSTALL_BLURB3=Bidh thu 'nad phàirt de choimhearsnachd à ceithir ceàrnan an t-saoghail, eadar luchd-cleachdaidh, com-pàirtichean is luchd-leasachaidh a tha ag obair còmhla gus am brabhsair as fhearr san t-saoghal a dhealbhadh.
 
 WARN_MIN_SUPPORTED_OS_MSG=Tha sinn duilich ach cha ghabh $BrandShortName a stàladh. Feumaidh an tionndadh seo de $BrandShortName ${MinSupportedVer} no tionndadh nas ùire.
@@ -39,7 +39,7 @@ BACK_BUTTON=&Air ais
 CANCEL_BUTTON=Sguir dheth
 OPTIONS_BUTTON=R&oghainnean
 
-MAKE_DEFAULT=Cleachd &brandShortName; mar a&m brabhsair bunaiteach agam
+MAKE_DEFAULT=Cleachd $BrandShortName mar a&m brabhsair bunaiteach agam
 CREATE_SHORTCUTS=Cruthaich ath-ghoiridean dha $BrandShortName:
 ADD_SC_TASKBAR=Air bàr nan sao&thair agam
 ADD_SC_QUICKLAUNCHBAR=Air a' bhàr &Quick Launch agam
@@ -49,6 +49,7 @@ SPACE_REQUIRED=Àite air a bheil feum:
 SPACE_AVAILABLE=Àite ri làimh:
 ONE_MOMENT=Fuirich diog, thèid $BrandShortName a chur gu dol cho luath 's a bhios an stàladh deiseil…
 INSTALL_MAINT_SERVICE=Stàla&ich an t-seirbheis aig $BrandShortName a nì ùrachaidhean sa chùlaibh
+SEND_PING=Cuir fiosrachadh mun stàladh s&eo gu Mozilla
 BROWSE_BUTTON=&Brabhsaich…
 DEST_FOLDER=Am pasgan-amais
 
