--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -13,9 +13,8 @@ alertAddonsInstalled=Deiseil leis an stàladh. Tha feum air ath-thòiseachadh.
 alertAddonsInstalledNoRestart=Tha an stàladh deiseil
 alertAddonsFail=Dh'fhàillig an stàladh
 
-alertDownloads=Luchdaidhean a-nuas
-alertDownloadsStart=A' luchdadh a-nuas: %S
-alertDownloadsDone=Tha %S deiseil leis an luchdadh a-nuas
+alertDownloadsStart2=A' tòiseachadh air a luchdadh a-nuas
+alertDownloadsDone2=Tha an luchdadh a-nuas deiseil
 alertCantOpenDownload=Cha ghabh am faidhle fhosgladh. Gnog air gus a shàbhaladh.
 alertDownloadsSize=Tha an luchdadh ro mhòr
 alertDownloadsNoSpace=Chan eil stòras gu leòr ann
@@ -260,7 +259,7 @@ timer.end=%1$S: %2$Sms
 webapps.installTitle=Stàlaich an aplacaid
 webapps.alertSuccess=Chaidh a stàladh
 # Shown when there is a generic problem installing an app
-webapps.installError=Mearachd a\\'s stàladh na h-aplacaid
+webapps.installError=Mearachd a\\' stàladh na h-aplacaid
 # Shown when there is something wrong with an apps manifest
 webapps.manifestInstallError=Tha manifest na h-aplacaid mì-dhligheach
 # Shown when a network error prevented installing an app
@@ -302,3 +301,13 @@ helperapps.openWithApp2=Fosgail leis an aplacaid %S
 helperapps.openWithList2=Fosgail le aplacaid
 helperapps.always=An-còmhnaidh
 helperapps.never=Chan ann idir
+
+#Lightweight themes
+# LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
+# the host name of the site.
+lwthemeInstallRequest.message=Dh'fheuch an làrach seo (%S) ri coltas a shuidheachadh.
+lwthemeInstallRequest.allowButton=Ceadaich
+
+lwthemePostInstallNotification.message=Chaidh coltas ùr a stàladh.
+lwthemePostInstallNotification.undoButton=Neo-dhèan
+lwthemePostInstallNotification.manageButton=Rianaich na coltasan…
