[gd] update from Pootle

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -288,3 +288,6 @@ getUserMedia.sharingCameraAndMicrophone.message2 = Tha an camara 's am micreofon
 #Reader mode
 readerMode.enter = Tòisich air a' mhodh leughaidh
 readerMode.exit = Fàg am modh leughaidh
+
+#Open in App
+openInApp.pageAction = Fosgail san aplacaid
