[gd] update from Pootle

--- a/webapprt/webapprt/webapp.properties
+++ b/webapprt/webapprt/webapp.properties
@@ -20,9 +20,17 @@ hideApplicationCmdMac.label=Falaich %S
 # the webapp.
 geolocation.title=%S - Nochdadh an àite
 geolocation.description=A bheil thu airson d' àite a nochdadh?
-geolocation.sharelocation=Nochd m' àite
-geolocation.dontshare=Na nochd d' àite
+geolocation.allow=Nochd m' àite
+geolocation.deny=Na nochd d' àite
 geolocation.remember=Cuimhnich mo roghainn
+
+# LOCALIZATION NOTE (desktop-notification.title): %S will be replaced with the
+# name of the webapp.
+desktop-notification.title=%S - Seall na brathan
+desktop-notification.description=A bheil thu airson brathan a cheadachadh?
+desktop-notification.allow=Seall
+desktop-notification.deny=Na seall
+desktop-notification.remember=Cuimhnich mo roghainn
 
 # LOCALIZATION NOTE (webapps.install.title): %S will be replaced with the name
 # of the webapp being installed.
