[gd] update from Pootle

--- a/browser/pdfviewer/viewer.properties
+++ b/browser/pdfviewer/viewer.properties
@@ -33,7 +33,7 @@ zoom.title=Sùm
 presentation_mode.title=Gearr leum dhan mhodh taisbeanaidh
 presentation_mode_label=Am modh taisbeanaidh
 open_file.title=Fosgail faidhle
-open_file_label=Fosgail faidhle
+open_file_label=Fosgail
 print.title=Clò-bhuail
 print_label=Clò-bhuail
 download.title=Luchdaich a-nuas
