--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -72,7 +72,7 @@ identity.identified.verified_by_you=Chuir thu eisgeachd tèarainteachd ris airso
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
 identity.encrypted2=Crioptaichte
-identity.ownerUnknown3=(neo aithnichte)
+identity.ownerUnknown3=neo aithnichte
 
 # Geolocation UI
 geolocation.allow=Co-roinn
