[gd] Update from Pootle

--- a/browser/metro/chrome/browser.properties
+++ b/browser/metro/chrome/browser.properties
@@ -36,6 +36,11 @@ contextAppbar2.restore=Neo-dhèan an sguabadh às
 # LOCALIZATION NOTE (contextAppbar2.clear): Unselects pages without modification.
 contextAppbar2.clear=Falamhaich an taghadh
 
+# Clear private data
+clearPrivateData.clearButton=Falamhaich
+clearPrivateData.title=Falamhaich an dàta prìobhaideach
+clearPrivateData.message=A bheil thu airson an dàta prìobhaideach fhalamhadh?
+
 # Settings Charms
 aboutCharm1=Mu dhèidhinn
 optionsCharm=Roghainnean
