--- a/webapprt/webapprt/webapp.properties
+++ b/webapprt/webapprt/webapp.properties
@@ -40,3 +40,6 @@ webapps.install.title=Stàlaich %S
 webapps.install.description=A bheil thu airson %S a stàladh?
 webapps.install.install=Stàlaich an aplacaid
 webapps.install.dontinstall=Na stàlaich
+
+paymentDialog.title=Pàigheadh
+paymentDialog.message=Cò an solaraiche pàighidh a bu toigh leat cleachdadh?
