Scots Gaelic: update from Pootle (mobile)

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -16,6 +16,9 @@ alertCantOpenDownload=Cha ghabh am faidhle fhosgladh. Gnog air gus a shàbhaladh
 alertDownloadsSize=Tha an luchdadh ro mhòr
 alertDownloadsNoSpace=Chan eil stòras gu leòr ann
 alertDownloadsToast=Thòisich an luchdadh a-nuas...
+alertDownloadsPause=Cuir 'na stad
+alertDownloadsResume=Lean air
+alertDownloadsCancel=Sguir dheth
 
 alertFullScreenToast=Put BAC gus modh na làn-sgrìn fhàgail
 
@@ -249,7 +252,7 @@ remoteIncomingPromptTitle=Ceangal a' tighinn a-steach
 # dialog that prompts the user to allow the incoming connection.
 remoteIncomingPromptMessage=Fhuair sinn iarrtas a dh'iarr cead airson dì-bhugachadh cèin. B' urrainn do chliant cèin làn-smachd fhaighinn air a' bhrabhsair agad. A bheil thu airson seo a cheadachadh?
 remoteIncomingPromptDisable=Cuir à comas
-remoteIncomingPromptAccept=Ceart ma-tha
+remoteIncomingPromptAccept=Ceart ma-thà
 remoteIncomingPromptCancel=Sguir dheth
 
 # Helper apps
@@ -260,6 +263,10 @@ helperapps.openWithApp2=Fosgail leis an aplacaid %S
 helperapps.openWithList2=Fosgail le aplacaid
 helperapps.always=An-còmhnaidh
 helperapps.never=Chan ann idir
+helperapps.pick=Coilean seo le
+helperapps.saveToDisk=Luchdaich a-nuas
+helperapps.alwaysUse=An-còmhnaidh
+helperapps.useJustOnce=Aon turas a-mhàin
 
 #Lightweight themes
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
@@ -291,3 +298,6 @@ readerMode.exit = Fàg am modh leughaidh
 
 #Open in App
 openInApp.pageAction = Fosgail san aplacaid
+openInApp.ok = Ceart ma-tha
+openInApp.cancel = Sguir dheth
+
